# tmplr

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  example-hut.md  teste.tmpl  tmplr.1.in  tmplr.c  version.h.in  versionize.sh
include/: tmplr.h
include/tmplr/: macros.h
man/: Makefile  tmplr.1.in  tmplr.3.in  tmplr_macros.3.in
test/: .gitignore  Makefile  id:000000,sig:06,src:000032,op:havoc,rep:16.in  id:000001,sig:06,src:000032,op:havoc,rep:32.args  id:000001,sig:06,src:000032,op:havoc,rep:32.in  id:000002,sig:06,src:000038,op:havoc,rep:32.in  override-and-filter.args  override-and-filter.exp  override-and-filter.in  runall.sh  runtest.sh  test-drop.exp  test-drop.in  test-icount.exp  test-icount.in  test-id:000000,sig:06,src:000000,op:flip1,pos:9.in  test-id:000001,sig:06,src:000000,op:flip1,pos:23.in  test-id:000002,sig:06,src:000000,op:flip1,pos:24.in  test-id:000003,sig:06,src:000000,op:flip1,pos:32.in  test-id:000004,sig:06,src:000000,op:flip1,pos:47.in  test-id:000005,sig:06,src:000000,op:flip1,pos:58.in  test-id:000006,sig:06,src:000000,op:flip1,pos:64.in  test-id:000007,sig:06,src:000000,op:flip1,pos:72.in  test-id:000008,sig:06,src:000000,op:flip1,pos:77.in  test-id:000009,sig:06,src:000000,op:flip1,pos:91.in  test-id:000010,sig:06,src:000000,op:flip1,pos:98.in  test-id:000011,sig:06,src:000000,op:flip1,pos:105.in  test-id:000012,sig:06,src:000000,op:flip1,pos:113.in  test-id:000013,sig:06,src:000000,op:arith8,pos:23,val:-3.in  test-id:000014,sig:06,src:000000,op:ext_AO,pos:65.in  test-id:000015,sig:06,src:000000,op:ext_AO,pos:72.in  (+62 more)
(+2 files in other folders)
